Fixed image sizes on firefox

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -902,6 +902,7 @@ body {
 
                 div {
                   display: grid;
+                  max-height: 75px;
 
                   img {
                     display: block;
